[gd_scene load_steps=3 format=2]

[ext_resource path="res://Nodes/TextSlider.gd" type="Script" id=1]
[ext_resource path="res://Scripts/CylinderElement.gd" type="Script" id=2]

[node name="Cylinder" type="HBoxContainer"]
margin_right = 948.0
margin_bottom = 214.0
theme_type_variation = "DeleteButton"
script = ExtResource( 2 )

[node name="ID" type="Label" parent="."]
margin_right = 12.0
margin_bottom = 14.0
size_flags_vertical = 0
text = "1."

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_right = 904.0
margin_bottom = 214.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="CrankOffset" type="Control" parent="VBox"]
margin_right = 888.0
margin_bottom = 22.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Crank Offset: 0.00 Cycles"
max_value = 1.0
value = 0.0
step = 0.0

[node name="PistonMotionFactor" type="Control" parent="VBox"]
margin_top = 26.0
margin_right = 888.0
margin_bottom = 48.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Piston Motion Factor: 0.5"
max_value = 20.0
value = 0.5
step = 0.0

[node name="IgnitionFactor" type="Control" parent="VBox"]
margin_top = 52.0
margin_right = 888.0
margin_bottom = 74.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Ignition Factor: 0.5"
max_value = 20.0
value = 0.5
step = 0.0

[node name="IgnitionTime" type="Control" parent="VBox"]
margin_top = 78.0
margin_right = 888.0
margin_bottom = 100.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Ignition Time: 0.1"
max_value = 0.5
value = 0.1
step = 0.0

[node name="IntakePipeLength" type="Control" parent="VBox"]
margin_top = 104.0
margin_right = 888.0
margin_bottom = 126.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Intake Pipe Length: 0.5 Meters"
max_value = 2.0
value = 0.5
step = 0.0

[node name="ExhaustPipeLength" type="Control" parent="VBox"]
margin_top = 130.0
margin_right = 888.0
margin_bottom = 152.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Exhaust Pipe Length: 0.5 Meters"
max_value = 2.0
value = 0.5
step = 0.0

[node name="ExtractorPipeLength" type="Control" parent="VBox"]
margin_top = 156.0
margin_right = 888.0
margin_bottom = 178.0
size_flags_horizontal = 3
script = ExtResource( 1 )
text = "Extractor Pipe Length: 0.5 Meters"
max_value = 2.0
value = 0.5
step = 0.0

[node name="Margin" type="Control" parent="VBox"]
margin_top = 182.0
margin_right = 888.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 32 )

[node name="Delete" type="Button" parent="."]
margin_left = 908.0
margin_right = 948.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_vertical = 0
theme_type_variation = "DeleteButton"
text = "X"
